[package]
name = "rs_array"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C target-cpu=native", "-C target-feature=+avx2,+avx,+fma,+sse4"]

[dependencies]
num-traits = "0.2.17"
colored = "2.0.4"
rand = "0.8.5"
rayon = "1.8.0"
rs_bench = { git = "https://github.com/xiaodong-hu/rs_bench.git" }
